cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)

add_subdirectory(Blockchain)
add_subdirectory(common)
add_subdirectory(fec)
add_subdirectory(keyring)
add_subdirectory(keys)
add_subdirectory(memprof)
add_subdirectory(Networking)
add_subdirectory(Services)
add_subdirectory(td)
add_subdirectory(terminal)
add_subdirectory(tl)
#add_subdirectory(tonlib)
